project/stage/semantic_tests/reject/bin_exp_while_cond.ul
void main() {

    if ( 1 + 1 * 1 + 1) { }
}
